[tool.poetry]
name = "rate-tool-api"
version = "0.1.0"
description = ""
authors = ["ametta <alessandro@ametta.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
black = "^24.4.2"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
pydantic = "^2.7.1"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
fuzzymatcher = "^0.0.6"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
